    compatible way for the `get' RPC.
  - Fix a dumb mistake in the `memcmp()' version that uses an offset and a
    length.  This function wasn't called either by asynchbase or by OpenTSDB.

New public APIs:
  - DeleteRequest now has constructors for deleting multiple qualifiers per
    row at once.
  - New `qualifiers' method in GetRequest for getting multiple qualifiers per
    row at once.


* Version 1.0 (2010-11-08) [dafc645]

Initial beta release (bundled with OpenTSDB):
  - Switched from LGPLv3+ to BSD license.
  - Fixed many bugs, including incorrect or inefficient error handling,
    synchronization bugs (race conditions).
  - Shutting down the client now correctly waits until all RPCs in flight
    have successfully completed.
  - No public API changes.


* Version 0.1 (2010-09-08) [d0646bb]

Initial alpha release:
  - Get, Put, Scan, ICV, with row locks and time-based edit buffering.

-----

Copyright (c) 2010, 2011  StumbleUpon, Inc.  All rights reserved.
This file is part of Async HBase.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:
  - Redistributions of source code must retain the above copyright notice,
    this list of conditions and the following disclaimer.
  - Redistributions in binary form must reproduce the above copyright notice,
    this list of conditions and the following disclaimer in the documentation
    and/or other materials provided with the distribution.
  - Neither the name of the StumbleUpon nor the names of its contributors
    may be used to endorse or promote products derived from this software
    without specific prior written permission.
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE