@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010  StumbleUpon, Inc.  All rights reserved.
+ * Copyright (c) 2010, 2011  StumbleUpon, Inc.  All rights reserved.
  * This file is part of Async HBase.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -37,7 +37,9 @@ import org.jboss.netty.buffer.ChannelBuffer;
  * <h1>A note on passing {@code String}s in argument</h1>
  * All strings are assumed to use the platform's default charset.
  */
-public final class PutRequest extends HBaseRpc {
+public final class PutRequest extends HBaseRpc
+  implements HBaseRpc.HasTable, HBaseRpc.HasKey, HBaseRpc.HasFamily,
+             HBaseRpc.HasQualifier, HBaseRpc.HasValue {
 
   private static final byte[] PUT = new byte[] { 'p', 'u', 't' };
 
@@ -175,21 +177,34 @@ public final class PutRequest extends HBaseRpc {
     this.bufferable = bufferable;
   }
 
-  // ---------------------- //
-  // Package private stuff. //
-  // ---------------------- //
+  @Override
+  public byte[] table() {
+    return table;
+  }
 
-  byte[] family() {
+  @Override
+  public byte[] key() {
+    return key;
+  }
+
+  @Override
+  public byte[] family() {
     return family;
   }
 
-  byte[] qualifier() {
+  @Override
+  public byte[] qualifier() {
     return qualifier;
   }
 
-  byte[] value() {
+  @Override
+  public byte[] value() {
     return value;
   }
+
+  // ---------------------- //
+  // Package private stuff. //
+  // ---------------------- //
 
   long lockid() {
     return lockid;
