@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010  StumbleUpon, Inc.  All rights reserved.
+ * Copyright (c) 2010, 2011  StumbleUpon, Inc.  All rights reserved.
  * This file is part of Async HBase.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -39,7 +39,8 @@ import org.jboss.netty.buffer.ChannelBuffer;
  * <h1>A note on passing {@code String}s in argument</h1>
  * All strings are assumed to use the platform's default charset.
  */
-public final class RowLockRequest extends HBaseRpc {
+public final class RowLockRequest extends HBaseRpc
+  implements HBaseRpc.HasTable, HBaseRpc.HasKey {
 
   private static final byte[] LOCK_ROW = new byte[] {
     'l', 'o', 'c', 'k', 'R', 'o', 'w'
@@ -62,6 +63,16 @@ public final class RowLockRequest extends HBaseRpc {
    */
   public RowLockRequest(final String table, final String key) {
     this(table.getBytes(), key.getBytes());
+  }
+
+  @Override
+  public byte[] table() {
+    return table;
+  }
+
+  @Override
+  public byte[] key() {
+    return key;
   }
 
   // ---------------------- //
