@@ -15,6 +15,8 @@ New public APIs:
     row at once.
   - New `qualifiers' method in GetRequest for getting multiple qualifiers per
     row at once.
+  - Add new interfaces nested in `HBaseRpc' to provide public APIs to be able
+    to introspect the contents of RPCs.
 
 
 * Version 1.0 (2010-11-08) [dafc645]
